Firebase hosting added

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,16 @@
         <div class="row ">
             <div class="col-md-3"></div>
             <div class="col-md-6">
+
                 <div class="alert alert-success" class="close" data-dismiss="alert" role="alert" id="success">
                     Data Added Successfully!
                 </div>
                 <div class="alert alert-danger" role="alert" id="error">
                     Error Found!
                 </div>
+
                 <div style="text-align: center">
+                    <h1>Your Thought</h1>
                     <div class="form-group">
                         <label for="msg">Example textarea</label>
                         <textarea class="form-control" id="msg" rows="3"></textarea>
