--- a/public/login.html
+++ b/public/login.html
@@ -14,6 +14,8 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <div style="text-align: center">
+                    <h1>Your Thought</h1>
+                    <br>
                     <div class="form-group">
                         <input type="email" class="form-control" id="email" placeholder="Enter email">
                     </div>
